multi-user authentication framework in place

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,11 @@ spring.datasource.url = jdbc:mysql://localhost:3306/wrpadmin?useSSL=false
 spring.datasource.username = root
 spring.datasource.password = SQLarmyken1!
 
-spring.security.user.name=a
-spring.security.user.password=a
+#spring.security.user.name=a
+#spring.security.user.password=a
+#
+#spring.security.user2.name=b
+#spring.security.user2.password=b
 
 
 ## Hibernate Properties
